--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </style>
   </head>
   <body>
-    <img src="first-gh-deployment.svg" alt="First GitHub Deployment" title="First GitHub Deployment" height="50" width="184" />
+    <img src="first-gh-deployment.svg" alt="First GitHub Deployment" title="Hey! First GitHub Deployment" height="50" width="184" />
     <main>
       <h1>Congratulations!</h1>
-      <h2>You just made your first GitHub deployment.</h2>
+      <h2>You just made your first GitHub deployment. Onward!</h2>
     </main>
   </body>
 </html>
